@@ -41,6 +41,7 @@ EXTRA_DIST += \
 	gnulib/m4/intmax.m4 \
 	gnulib/m4/inttypes-pri.m4 \
 	gnulib/m4/lcmessage.m4 \
+	gnulib/m4/math_h.m4 \
 	gnulib/m4/printf-posix.m4 \
 	gnulib/m4/uintmax_t.m4 \
 	gnulib/m4/visibility.m4
