@@ -1,3 +1,7 @@
+Thu Feb 16 10:55:05 GMT 2012  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Add gnulib/m4/math_h.m4.
+
 Tue Feb 14 12:18:50 GMT 2012  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.6.1.
